web: fix dark mode for swagger
This is a poor man's dark mode for
swagger-ui as per [1].

[1] https://github.com/swagger-api/swagger-ui/issues/5327#issuecomment-742375520

--- a/web/src/index.css
+++ b/web/src/index.css
@@ -495,10 +495,18 @@ details.foldable[open] summary::before {
 }
 
 @media (prefers-color-scheme: dark) {
-   .pf-theme-dark .pf-c-nav__link {
-     color: #fff !important;
-   }
-   .pf-theme-dark .pf-c-modal-box__title-text, .pf-theme-dark .pf-c-modal-box__body {
-     color: #fff !important;
-   }
- }
+  .pf-theme-dark .pf-c-nav__link {
+    color: #fff !important;
+  }
+  .pf-theme-dark .pf-c-modal-box__title-text, .pf-theme-dark .pf-c-modal-box__body {
+    color: #fff !important;
+  }
+
+  .pf-theme-dark .swagger-ui {
+    filter: invert(88%) hue-rotate(180deg);
+  }
+
+  .pf-theme-dark .swagger-ui .highlight-code {
+    filter: invert(100%) hue-rotate(180deg);
+  }
+}
